--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
-    "BotKey": "your key",
-    "OpenAIKey": "your openai key",
+    "BotKey": "nnYw47mpsjpuAyn",
+    "OpenAIKey": "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",
     "audio_di_bagian_menu": "./menu.mp3",
     "auto_ai_japri": false,
     "auto_ai_grup": false,
