--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "ownerNumber": ["6282193115723@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "gcwa" : "https://instabio.cc/Alphabot",
-    "botName": "Haruka-Mdོ ",
-    "footer": "2023 © api.zeeoneofc.my.id",
+    "ownerNumber": ["6285156402391@s.whatsapp.net","6285156402391@s.whatsapp.net"],
+    "ownerName": "Denny",
+    "instagram" : "https://instagram.com/-",
+    "gcwa" : "https://instabio.cc/-",
+    "botName": "Denny",
+    "footer": "2023 © 2malam",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
@@ -27,7 +27,7 @@
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
-        "prem": 1000,
+        "prem": 10000,
         "user": 15
     }
 }
